# ChangeLog for x11-themes/reinhardtstyle
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/reinhardtstyle/ChangeLog,v 1.4 2005/01/01 02:41:41 weeve Exp $

  31 Dec 2004; Jason Wever <weeve@gentoo.org> reinhardtstyle-0.8.2.ebuild:
  Added ~sparc keyword.

*reinhardtstyle-0.8.2 (04 Dec 2004)

  04 Dec 2004; Dominik Stadler <centic@gentoo.org>
  +reinhardtstyle-0.8.2.ebuild:
  Add new Version 0.8.2

  17 Oct 2004; David Holm <dholm@gentoo.org> reinhardtstyle-0.8.ebuild:
  Added to ~ppc.

*reinhardtstyle-0.8 (03 Oct 2004)

  03 Oct 2004; Dominik Stadler <centic@gentoo.org>
  +reinhardtstyle-0.8.ebuild:
  Add new decoration, fixes Bug 34508
