@@ -1,6 +1,4 @@
-MD5 92d7d8c0a9bcf2ad52752521bd9cfa62 ChangeLog 712
 MD5 1b6808bbd78c9161f8b7efb090d966f8 metadata.xml 162
-MD5 d2755b6890be6086379b3f751ce24933 reinhardtstyle-0.8.ebuild 595
-MD5 9505defc7b321881c04f88d64a97a71f reinhardtstyle-0.8.2.ebuild 605
-MD5 c404681188496b2ec0aae61966ad1be7 files/digest-reinhardtstyle-0.8 76
+MD5 b8cfe0b8396e85bd74d7731dc9e7fa67 reinhardtstyle-0.8.2.ebuild 605
+MD5 df7cdd4706fcc149f5682dff1d541f45 ChangeLog 840
 MD5 953776f9d36d0ae63bbb815edd2487f4 files/digest-reinhardtstyle-0.8.2 78
